# fastapi-websocket

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
app/core/: logging.py  settings.py
app/core/lifespan/: base.py  shutdown.py  startup.py
app/endpoints/: http.py  websocket.py
app/templates/: index.html
app/websockets/: manager.py  notifier.py  shutdown.py
