[project]
name = "fastapi-websocket"
version = "0.1.0"
description = ""
authors = [
    {name = "Dima Rubets",email = "rubetsdima100@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
